# flask-graphql

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  test2.py
migrations/: env.py
migrations/versions/: 2024_10_21_1423-bde05ab45c08_init.py
nginx/: Dockerfile  nginx.conf
src/application/common/interfaces/: commiter.py
src/application/users/: commands.py  dto.py
src/application/users/usecases/: create.py  delete.py  get.py
src/domain/users/: entities.py  repositories.py
src/infrastructure/: settings.py
src/infrastructure/authentication/: password_hasher.py
src/infrastructure/db/: commiter.py  database.py
src/infrastructure/db/models/: user.py
src/infrastructure/db/repositories/: user.py
src/presentation/api/: error_handlers.py
src/presentation/api/v1/: graphql.py  router.py  schema.py
src/presentation/api/v1/mutations/: __init__.py  users.py
src/presentation/api/v1/queries/: __init__.py  users.py
src/presentation/api/v1/schemas/: users.graphql
src/presentation/api/v1/views/: __init__.py  users.py
src/presentation/resolvers/v1/: graphql.py
src/presentation/resolvers/v1/schemas/: users.graphql
src/presentation/resolvers/v1/views/: users.py
