[tool.poetry]
name = "graphql-flask"
version = "0.1.0"
description = ""
authors = ["vedaka1 <vladik.kuleshov.2003@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
ariadne = "^0.23.0"
# psycopg2 = "^2.9.10"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.10"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"




[tool.poetry.group.lint.dependencies]
mypy = "^1.12.1"
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"

[tool.mypy]
strict = true
ignore_missing_imports = true
disable_error_code = ["import-untyped", "type-abstract"]
color_output = true
pretty = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
